# ClawGallery

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  QA_REPORT.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
crates/clawgallery-vdr/: Cargo.toml
crates/clawgallery-vdr/src/: client.rs  duplicates.rs  index.rs  lib.rs  schema.rs  search.rs  store.rs
crates/clawgallery-vdr/tests/: reusable_api.rs
scripts/: colqwen2_server.py  jina_mlx_embeddings_server.py  jina_omni_server.py  mlx_embeddings_server.py
skills/clawgallery/: SKILL.md
skills/clawgallery/references/: usage.md
src/: main.rs  state.rs
src/vdr/: backend.rs  client.rs  index.rs  mod.rs  search.rs  serve.rs  store.rs
tests/: cli.rs  cli_hardening.rs  jina_mlx_server_http.rs  vdr_auto_start_cli.rs  vdr_auto_start_edges_cli.rs  vdr_cli.rs  vdr_serve_cli.rs  vdr_sync_batch_cli.rs
tests/vdr_autosync_support/: mod.rs
tests/vdr_support/: mod.rs
