[workspace]
members = [".", "crates/clawgallery-vdr"]

[package]
name = "clawgallery"
version = "0.1.0"
authors = ["Jeffrey (Dongkyu) Kim <vkehfdl1@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Agent-native screenshot gallery CLI with JSONL metadata, visual captions, and safe rename workflows."
license = "Apache-2.0"
repository = "https://github.com/NomaDamas/ClawGallery"
homepage = "https://github.com/NomaDamas/ClawGallery"
readme = "README.md"
keywords = ["screenshots", "gallery", "captions", "rename", "search"]
categories = ["command-line-utilities", "filesystem", "multimedia::images"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clawgallery-vdr = { version = "0.1.0", path = "crates/clawgallery-vdr" }
dirs = "6.0"
nucleo-matcher = "0.3.1"
regex = "1.12.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strsim = "0.11.1"
thiserror = "2.0"
unicode-normalization = "0.1.22"
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
